--- a/proxy.toml
+++ b/proxy.toml
@@ -2,11 +2,11 @@
 
 name        = "proxyengine"
 master_core = 0
-pool_size   = 2048              # default 2047
+pool_size   = 2048              # default 2048
 cache_size  = 32                # default 32
-cores       = [ 1 ]
+cores       = [ 1, 2 ]
 ports       = [ 
-                    { name="13:00.0", rxd= 512, txd= 512, cores = [1] } ,
-                    { name="kni:1", rxd=64, txd=64, cores = [1] }
+                    { name="13:00.0", rxd= 512, txd= 512, cores = [1, 2] } ,
+                    { name="kni:1", rxd=64, txd=64, cores = [1], k_cores = [1] }
               ] 
-vdev        = [ "net_kni0" ]
+vdev        = [ "net_kni0" ]    # for use of vdev with KNI PMD, see https://dpdk.org/doc/guides/nics/kni.html
