--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,11 @@ nix = "0.10.0"
 ctrlc = { version = "~3", features = ["termination"] }
 time = ">=0.1.0"
 ipnet = "1.0"
+toml = "0.4"
+serde = "1.0"
+serde_derive = "1.0"
+eui48 = { version= "0.3", features=["serde"] }
+error-chain = "0.11"
 
 [features]
 
