--- a/proxy.toml
+++ b/proxy.toml
@@ -1,5 +1,6 @@
 
 
+[netbricks]
 name        = "proxyengine"
 master_core = 0
 pool_size   = 2048              # default 2048
@@ -10,3 +11,16 @@ ports       = [
                     { name="kni:1", rxd=64, txd=64, cores = [1], k_cores = [1] }
               ] 
 vdev        = [ "net_kni0" ]    # for use of vdev with KNI PMD, see https://dpdk.org/doc/guides/nics/kni.html
+
+[proxyengine]
+
+proxy       = { namespace="nskni", mac="8e:f7:35:7e:73:91", ipnet="192.168.222.1/24", port=999 }
+servers     = [ { id = "server 1", ip = "192.168.222.3", linux_if="enp7s0f1" , port = 12345 },
+                { id = "server 2", ip = "192.168.222.3", linux_if="enp7s0f1" , port = 12346 },
+                { id = "server 3", ip = "192.168.222.3", linux_if="enp7s0f1" , port = 12347 },
+                { id = "server 4", ip = "192.168.222.3", linux_if="enp7s0f1" , port = 12348 },
+                { id = "server 5", ip = "192.168.222.3", linux_if="enp7s0f1" , port = 12349 },
+                { id = "server 6", ip = "192.168.222.3", linux_if="enp7s0f1" , port = 12350 },
+                { id = "server 7", ip = "192.168.222.3", linux_if="enp7s0f1" , port = 12351 },
+              ]
+queries     = 30
