--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,15 @@ name = "proxyengine"
 version = "0.1.0"
 authors = ["Rainer Stademann <rainer.stademann@silverengine.de>"]
 
+[lib]
+name = "tcp_proxy"
+path = "src/lib.rs"
+
+[[bin]]
+name = "proxy_engine"
+path = "src/bin.rs"
+
+
 [dependencies]
 e2d2 = { path = "../../gitclones/NetBricks/framework", features = ["performance"] }
 #e2d2 = { git = "https://github.com/rstade/NetBricks", branch = "e2d2-0-1-1" }
