--- a/proxy.toml
+++ b/proxy.toml
@@ -7,7 +7,7 @@ pool_size   = 2048              # default 2048
 cache_size  = 32                # default 32
 cores       = [ 1, 2 ]
 ports       = [ 
-                    { name="7:00.0", rxd= 512, txd= 512, cores = [1, 2] } ,
+                    { name="7:00.0", rxd= 512, txd= 512, cores = [1, 2], fdir = { pballoc=2, mode=2, ipv4_mask= {src_ip="0.0.0.0", dst_ip="FFFFFFFF"}, src_port_mask="0", dst_port_mask="FC00"}},
                     { name="kni:1", rxd=64, txd=64, cores = [1], k_cores = [1] }
               ] 
 vdev        = [ "net_kni0" ]    # for use of vdev with KNI PMD, see https://dpdk.org/doc/guides/nics/kni.html
