--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "proxyengine"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Rainer Stademann <rainer.stademann@silverengine.de>"]
 
 [lib]
@@ -13,8 +13,7 @@ path = "src/bin.rs"
 
 
 [dependencies]
-e2d2 = { path = "../../gitclones/NetBricks/framework", features = ["performance"] }
-#e2d2 = { git = "https://github.com/rstade/NetBricks", branch = "e2d2-0-1-1" }
+e2d2 = { version = "0.2.0", path = "../../gitclones/NetBricks/framework", features = ["performance"] }
 rand = "0.3"
 fnv = "*"
 log = "0.4"
@@ -28,6 +27,8 @@ serde = "1.0"
 serde_derive = "1.0"
 eui48 = { version= "0.3", features=["serde"] }
 error-chain = "0.11"
+uuid = { version = "0.6", features = ["v4"] }
+separator =  ">= 0.3"
 
 [features]
 
