--- a/tests/test_proxy.toml
+++ b/tests/test_proxy.toml
@@ -14,8 +14,8 @@ vdev        = [ "net_kni0" ]    # for use of vdev with KNI PMD, see https://dpdk
 
 [proxyengine]
 
-proxy       = { namespace="nskni", mac="8e:f7:35:7e:73:91", ipnet="192.168.222.1/24", port=999 }
-servers     = [ { id = "server 1", ip = "192.168.222.3", linux_if="enp7s0f1" , port = 12345 },
+engine       = { namespace="nskni", mac="8e:f7:35:7e:73:91", ipnet="192.168.222.1/24", port=999 }
+targets     = [ { id = "server 1", ip = "192.168.222.3", linux_if="enp7s0f1" , port = 12345 },
                 { id = "server 2", ip = "192.168.222.3", linux_if="enp7s0f1" , port = 12346 },
                 { id = "server 3", ip = "192.168.222.3", linux_if="enp7s0f1" , port = 12347 },
                 { id = "server 4", ip = "192.168.222.3", linux_if="enp7s0f1" , port = 12348 },
@@ -23,4 +23,4 @@ servers     = [ { id = "server 1", ip = "192.168.222.3", linux_if="enp7s0f1" , p
                 { id = "server 6", ip = "192.168.222.3", linux_if="enp7s0f1" , port = 12350 },
                 { id = "server 7", ip = "192.168.222.3", linux_if="enp7s0f1" , port = 12351 },
               ]
-queries     = 30
+test_size     = 30
