--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ path = "src/bin.rs"
 
 
 [dependencies]
-e2d2 = { version = "0.3.0", path = "../../gitclones/NetBricks/framework", features = ["performance"] }
+e2d2 = { version = "0.3.0", path = "../NetBricks/framework", features = ["performance"] }
 rand = "0.3"
 fnv = "*"
 log = "0.4"
@@ -26,8 +26,8 @@ toml = "0.4"
 serde = "1.0"
 serde_derive = "1.0"
 eui48 = { version= "0.3", features=["serde"] }
-error-chain = "0.11"
-uuid = { version = "0.6", features = ["v4"] }
+error-chain = ">=0.12"
+uuid = { version = ">=0.7", features = ["v4"] }
 separator =  ">= 0.3"
 
 [features]
