--- a/tests/timeout.toml
+++ b/tests/timeout.toml
@@ -8,14 +8,14 @@ pool_size   = 2048              # default 2048
 cache_size  = 32                # default 32
 cores       = [ 1 ]
 ports       = [ 
-                    { name="7:00.0", rxd= 512, txd= 512, cores = [1], fdir = { pballoc=2, mode=2, ipv4_mask= {src_ip="0.0.0.0", dst_ip="FFFFFFFF"}, src_port_mask="0", dst_port_mask="FC00"}},
+                    { name="7:00.0", rxd= 512, txd= 512, cores = [1], fdir = { pballoc=2, mode=2, ipv4_mask= {src_ip="0.0.0.0", dst_ip="FFFFFFFF"}, src_port_mask="0", dst_port_mask="E000"}},
                     { name="kni:1", rxd=64, txd=64, cores = [1], k_cores = [1] }
               ] 
 vdev        = [ "net_kni0" ]    # for use of vdev with KNI PMD, see https://dpdk.org/doc/guides/nics/kni.html
 
 [proxyengine]
 
-engine      = { namespace="nskni", mac="8e:f7:35:7e:73:91", ipnet="192.168.222.1/24", port=999 }
+engine      = { namespace="nskni", mac="3c:fd:fe:9e:ce:4c", ipnet="192.168.222.1/24", port=999 }
 # select non exiting server addresses for the timeout test
 targets     = [ { id = "server 1", ip = "192.168.222.244", linux_if="enp7s0f1" , port = 12345 },
                 { id = "server 2", ip = "192.168.222.244", linux_if="enp7s0f1" , port = 12346 },
