--- a/tests/client_syn_fin.toml
+++ b/tests/client_syn_fin.toml
@@ -14,7 +14,7 @@ vdev        = [ "net_kni0" ]    # for use of vdev with KNI PMD, see https://dpdk
 
 [proxyengine]
 
-engine      = { flow_steering="Ip", namespace="nskni", mac="a0:36:9f:82:9c:fc", ipnet="192.168.222.1/24", port=999 }
+engine      = { flow_steering="Ip", namespace="nskni", mac="a0:36:9f:82:9c:fc", ipnet="192.168.222.1/24", port=999, timeouts= { established= 1800 } }
 
 targets     = [ { id = "server 1", ip = "192.168.222.244", linux_if="enp7s0f1" , port = 12345 },
                 { id = "server 2", ip = "192.168.222.244", linux_if="enp7s0f1" , port = 12346 },
