--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "proxyengine"
-version = "0.2.0"
+version = "0.3.0"
 authors = ["Rainer Stademann <rainer.stademann@silverengine.de>"]
 
 [lib]
@@ -13,7 +13,7 @@ path = "src/bin.rs"
 
 
 [dependencies]
-e2d2 = { version = ">=0.3.2", path = "../../work/NetBricks/framework", features = ["performance"] }
+e2d2 = { version = "=0.3.2", path = "../../work/NetBricks/framework", features = ["performance"] }
 rand = "0.3"
 fnv = "*"
 log = "0.4"
