--- a/tests/test_rfs_port.toml
+++ b/tests/test_rfs_port.toml
@@ -5,16 +5,16 @@ name        = "test_rfs_port"
 master_core = 0
 pool_size   = 2048              # default 2048
 cache_size  = 32                # default 32
-cores       = [ 1, 2, 3 ]
+cores       = [ 1, 2 ]
 ports       = [ 
-                    { name="7:00.0", rxd= 512, txd= 512, cores = [1, 2, 3], driver= "Ixgbe", fdir = { pballoc="RteFdirPballoc256k", mode="RteFdirModePerfect", ipv4_mask= {src_ip="0.0.0.0", dst_ip="FFFFFFFF"}, src_port_mask="0", dst_port_mask="FC00"}},
+                    { name="7:00.0", rxd= 512, txd= 512, cores = [1, 2 ], driver= "Ixgbe", fdir = { pballoc="RteFdirPballoc256k", mode="RteFdirModePerfect", ipv4_mask= {src_ip="0.0.0.0", dst_ip="FFFFFFFF"}, src_port_mask="0", dst_port_mask="F000"}},
                     { name="kni:1", rxd=64, txd=64, cores = [1], k_cores = [1] }
               ] 
 vdev        = [ "net_kni0" ]    # for use of vdev with KNI PMD, see https://dpdk.org/doc/guides/nics/kni.html
 
 [proxyengine]
 
-engine       = { flow_steering= "Port", namespace="nskni", mac="a0:36:9f:82:9c:fc", ipnet="192.168.222.1/24", port=999, timeouts= { established= 1800 } }
+engine       = { flow_steering= "Port", namespace="nskni", mac="a0:36:9f:82:9c:fc", ipnet="192.168.222.1/24", port=999, timeouts= { established= 3000 } }
 targets     = [ { id = "server 1", ip = "192.168.222.32", linux_if="enp7s0f1" , port= 12345 },
                 { id = "server 2", ip = "192.168.222.32", linux_if="enp7s0f1" , port= 12346 },
                 { id = "server 3", ip = "192.168.222.32", linux_if="enp7s0f1" , port= 12347 },
@@ -23,4 +23,4 @@ targets     = [ { id = "server 1", ip = "192.168.222.32", linux_if="enp7s0f1" , 
                 { id = "server 6", ip = "192.168.222.32", linux_if="enp7s0f1" , port= 12350 },
                 { id = "server 7", ip = "192.168.222.32", linux_if="enp7s0f1" , port= 12351 },
               ]
-test_size     = 30
+test_size     = 50
