--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ path = "src/bin.rs"
 
 [dependencies]
 e2d2 = { version = "=0.3.5", path = "../NetBricks/framework", features = ["performance"] }
-netfcts={ version="0.1.1", path = "../trafficengine/netfcts" }
+netfcts={ version="0.1.1", path = "../netfcts" }
 rand = "0.3"
 fnv = "*"
 log = "0.4"
