--- a/proxy_run.2.toml
+++ b/proxy_run.2.toml
@@ -3,9 +3,9 @@ name        = "proxyengine"
 master_core = 0
 pool_size   = 2048              # default 2048
 cache_size  = 32                # default 32
-cores       = [ 1, 2, 3 ]
+cores       = [ 1, 2 ]
 ports       = [ 
-                    { name="a:00.0", rxd= 512, txd= 512, cores = [1, 2, 3], driver="I40e",fdir = { pballoc="RteFdirPballoc256k", mode="RteFdirModePerfect", ipv4_mask= {src_ip="0.0.0.0", dst_ip="FFFFFFFF"}, src_port_mask="0", dst_port_mask="F800"} } ,
+                    { name="a:00.0", rxd= 512, txd= 512, cores = [1, 2], driver="I40e",fdir = { pballoc="RteFdirPballoc256k", mode="RteFdirModePerfect", ipv4_mask= {src_ip="0.0.0.0", dst_ip="FFFFFFFF"}, src_port_mask="0", dst_port_mask="E000"} } ,
                     { name="kni:1", rxd=64, txd=64, cores = [1], k_cores = [1] }
               ] 
 vdev        = [ "net_kni0" ]    # for use of vdev with KNI PMD, see https://dpdk.org/doc/guides/nics/kni.html
@@ -14,6 +14,6 @@ vdev        = [ "net_kni0" ]    # for use of vdev with KNI PMD, see https://dpdk
 
 engine       = { flow_steering= "Ip", namespace="nskni", mac="3c:fd:fe:9e:ce:4c", ipnet="192.168.222.8/24", port=19999, timeouts= { established= 10000 }  }
 targets      = [ { id = "tcpgen_0", ip = "192.168.222.2", mac="a0:36:9f:82:9c:fc" , port = 65535 },
-                 { id = "tcpgen_1", ip = "192.168.222.2", mac="a0:36:9f:82:9c:fc" , port = 57343 },
-                 { id = "tcpgen_2", ip = "192.168.222.2", mac="a0:36:9f:82:9c:fc" , port = 49151 },
+                 { id = "tcpgen_1", ip = "192.168.222.2", mac="a0:36:9f:82:9c:fc" , port = 49151 },
+                 { id = "tcpgen_2", ip = "192.168.222.2", mac="a0:36:9f:82:9c:fc" , port = 32767 },
               ]
