--- a/proxy_run.toml
+++ b/proxy_run.toml
@@ -5,14 +5,18 @@ pool_size   = 2048              # default 2048
 cache_size  = 32                # default 32
 cores       = [ 1, 2, 3 ]
 ports       = [ 
-                    { name="7:00.0", rxd= 512, txd= 512, cores = [1, 2, 3], fdir = { pballoc="RteFdirPballoc256k", mode="RteFdirModePerfect", ipv4_mask= {src_ip="0.0.0.0", dst_ip="FFFFFFFF"}, src_port_mask="0", dst_port_mask="F800"} } ,
+                    { name="7:00.0", rxd= 1024, txd= 4096, cores = [1, 2, 3 ], driver= "Ixgbe", fdir = { pballoc="RteFdirPballoc256k", mode="RteFdirModePerfect", ipv4_mask= {src_ip="0.0.0.0", dst_ip="FFFFFFFF"}, src_port_mask="0", dst_port_mask="C000"} } ,
                     { name="kni:1", rxd=64, txd=64, cores = [1], k_cores = [1] }
               ] 
 vdev        = [ "net_kni0" ]    # for use of vdev with KNI PMD, see https://dpdk.org/doc/guides/nics/kni.html
 
 [proxyengine]
 
-engine       = { flow_steering= "Ip", namespace="nskni", mac="a0:36:9f:82:9c:fc", ipnet="192.168.222.1/24", port=19999, timeouts= { established= 1800 }  }
-targets      = [ { id = "tcpgen_0", ip = "192.168.222.2", mac="8e:f7:35:7e:73:91" , port = 65535 },
-                 { id = "tcpgen_1", ip = "192.168.222.2", mac="8e:f7:35:7e:73:91" , port = 57343 },
+engine       = { flow_steering= "Ip", namespace="nskni", mac="a0:36:9f:82:9c:fc", ipnet="192.168.222.8/24", port=999, timeouts= { established= 2000 }  }
+
+targets      = [ { id = "tcpgen_0", ip = "192.168.222.3", mac="3c:fd:fe:9e:ce:4c" , port = 65535 },
+                 { id = "tcpgen_1", ip = "192.168.222.4", mac="3c:fd:fe:9e:ce:4c" , port = 65535 },
+                 { id = "tcpgen_2", ip = "192.168.222.5", mac="3c:fd:fe:9e:ce:4c" , port = 65535 },
+                 { id = "tcpgen_3", ip = "192.168.222.6", mac="3c:fd:fe:9e:ce:4c" , port = 65535 },
+                 { id = "tcpgen_4", ip = "192.168.222.7", mac="3c:fd:fe:9e:ce:4c" , port = 65535 },
               ]
