--- a/proxy_run.2.toml
+++ b/proxy_run.2.toml
@@ -3,9 +3,9 @@ name        = "proxyengine"
 master_core = 0
 pool_size   = 2048              # default 2048
 cache_size  = 32                # default 32
-cores       = [ 1 ]
+cores       = [ 1, 2 ]
 ports       = [ 
-                    { name="a:00.0", rxd= 1024, txd= 1024, cores = [1], driver="I40e",fdir = { pballoc="RteFdirPballoc256k", mode="RteFdirModePerfect", ipv4_mask= {src_ip="0.0.0.0", dst_ip="FFFFFFFF"}, src_port_mask="0", dst_port_mask="8000"} } ,
+                    { name="a:00.0", rxd= 4096, txd= 4096, cores = [1, 2], driver="I40e",fdir = { pballoc="RteFdirPballoc256k", mode="RteFdirModePerfect", ipv4_mask= {src_ip="0.0.0.0", dst_ip="FFFFFFFF"}, src_port_mask="0", dst_port_mask="8000"} } ,
                     { name="kni:1", rxd=64, txd=64, cores = [1], k_cores = [1] }
               ] 
 vdev        = [ "net_kni0" ]    # for use of vdev with KNI PMD, see https://dpdk.org/doc/guides/nics/kni.html
