--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "proxyengine"
-version = "0.4.5"
+version = "0.4.6"
 authors = ["Rainer Stademann <rainer.stademann@silverengine.de>"]
 
 [lib]
@@ -13,8 +13,8 @@ path = "src/bin.rs"
 
 
 [dependencies]
-e2d2 = { version = "=0.5.2", path = "../NetBricks/framework", features = ["performance"] }
-netfcts={ version="0.1.5", path = "../netfcts" }
+e2d2 = { version = "=1.0.1", path = "../NetBricks/framework", features = ["performance"] }
+netfcts={ version="0.1.6", path = "../netfcts" }
 fnv = "*"
 log = "0.4"
 env_logger = "0.5"
@@ -22,7 +22,7 @@ nix = "0.10.0"
 ctrlc = { version = "~3", features = ["termination"] }
 time = ">=0.1.0"
 ipnet = ">=1.0"
-toml = "0.4"
+toml = "~0.4"
 serde = "1.0"
 serde_derive = "1.0"
 eui48 = { version= ">=0.3", features=["serde"] }
