--- a/tests/client_syn_fin.toml
+++ b/tests/client_syn_fin.toml
@@ -4,9 +4,9 @@ name        = "client_syn_fin"
 master_core = 0
 pool_size   = 2048              # default 2048
 cache_size  = 32                # default 32
-cores       = [ 1, 2 ]
+cores       = [ 1]
 ports       = [ 
-                    { name="7:00.0", rxd= 512, txd= 512, cores = [1, 2], checksum = true, fdir = { pballoc="RteFdirPballoc256k", mode="RteFdirModePerfect", ipv4_mask= {src_ip="0.0.0.0", dst_ip="FFFFFFFF"}, src_port_mask="0", dst_port_mask="FC00"}},
+                    { name="7:00.0", rxd= 512, txd= 512, cores = [1], checksum = true, fdir = { pballoc="RteFdirPballoc256k", mode="RteFdirModePerfect", ipv4_mask= {src_ip="0.0.0.0", dst_ip="FFFFFFFF"}, src_port_mask="0", dst_port_mask="FC00"}},
                     { name="kni:1", rxd=64, txd=64, cores = [1], k_cores = [1] }
               ] 
 vdev        = [ "net_kni0" ]    # for use of vdev with KNI PMD, see https://dpdk.org/doc/guides/nics/kni.html
@@ -18,4 +18,4 @@ engine      = { flow_steering="Ip", namespace="nskni", mac="a0:36:9f:82:9c:fc", 
 targets     = [ { id = "server 1", ip = "192.168.222.244", linux_if="enp7s0f1" , port = 12345 },
                 { id = "server 2", ip = "192.168.222.244", linux_if="enp7s0f1" , port = 12346 },
               ]
-test_size   = 4
+test_size   = 1
