--- a/proxy_run.2.toml
+++ b/proxy_run.2.toml
@@ -5,14 +5,16 @@ pool_size   = 2048              # default 2048
 cache_size  = 128               # default 32
 cores       = [ 1, 2, 3 ]
 ports       = [ 
-                    { name="7:00.0", rxd= 4096, txd= 4096, cores = [1, 2, 3], checksum = false, driver="I40e",fdir = { pballoc="RteFdirPballoc256k", mode="RteFdirModePerfect", ipv4_mask= {src_ip="0.0.0.0", dst_ip="FFFFFFFF"}, src_port_mask="0", dst_port_mask="8000"} } ,
-                    { name="kni:1", rxd=64, txd=64, cores = [1], k_cores = [1] }
-              ] 
+                    { name="7:00.0", rxd= 4096, txd= 4096, cores = [1, 2, 3], checksum = false, driver="I40e", kni="virtio:virtio_user0", fdir = { pballoc="RteFdirPballoc256k", mode="RteFdirModePerfect", ipv4_mask= {src_ip="0.0.0.0", dst_ip="FFFFFFFF"}, src_port_mask="0", dst_port_mask="8000"}, flow_steering= "Ip" } ,
+                    { name="kni:1", rxd=64, txd=64, cores = [1], k_cores = [1], namespace="nskni", mac="3c:fd:fe:9e:ce:4c", ipnet="192.168.222.8/24" },
+                    { name="virtio:virtio_user0,path=/dev/vhost-net,iface=tap00,queues={},queue_size=1024", rxd=1024, txd=1024, cores = [1],  namespace="nsvirtio00", mac="3c:fd:fe:9e:ce:4c", ipnet="192.168.222.8/24"   }
+              ]
+
 vdev        = [ "net_kni0" ]    # for use of vdev with KNI PMD, see https://dpdk.org/doc/guides/nics/kni.html
 
 [proxyengine]
 
-engine       = { flow_steering= "Ip", namespace="nskni", mac="3c:fd:fe:9e:ce:4c", ipnet="192.168.222.8/24", port=19999, timeouts= { established= 10000 }, detailed_records= false  }
+engine       = {   port=19999, timeouts= { established= 10000 }, detailed_records= false  }
 targets      = [ { id = "tcpgen_0", ip = "192.168.222.2", mac="a0:36:9f:82:9c:fc" , port = 65535 },
                  { id = "tcpgen_1", ip = "192.168.222.2", mac="a0:36:9f:82:9c:fc" , port = 57343 },
                  { id = "tcpgen_2", ip = "192.168.222.2", mac="a0:36:9f:82:9c:fc" , port = 49151 },
