--- a/tests/test_rfs_ip.toml
+++ b/tests/test_rfs_ip.toml
@@ -7,14 +7,15 @@ pool_size   = 2048              # default 2048
 cache_size  = 128               # default 32
 cores       = [ 1, 2 ]
 ports       = [ 
-                 { name="7:00.0", rxd= 512, txd= 512, cores = [1, 2], checksum = false, fdir = { pballoc="RteFdirPballoc256k", mode="RteFdirModePerfect", ipv4_mask= {src_ip="0.0.0.0", dst_ip="FFFFFFFF"}, src_port_mask="0", dst_port_mask="FC00"}},
-                 { name="kni:1", rxd=64, txd=64, cores = [1], k_cores = [1] }
+                 { name="7:00.0", rxd= 512, txd= 512, cores = [1, 2], checksum = false, driver= "Ixgbe", kni="virtio:virtio_user0", fdir = { pballoc="RteFdirPballoc256k", mode="RteFdirModePerfect", ipv4_mask= {src_ip="0.0.0.0", dst_ip="FFFFFFFF"}, src_port_mask="0", dst_port_mask="FC00"}, flow_steering= "Ip" },
+                 { name="kni:1", rxd=64, txd=64, cores = [1], k_cores = [1], namespace="nskni", mac="a0:36:9f:82:9c:fc", ipnet="192.168.222.1/24" },
+                 { name="virtio:virtio_user0,path=/dev/vhost-net,iface=tap00,queues={},queue_size=1024", rxd=1024, txd=1024, cores = [1],  namespace="nsvirtio00", mac="a0:36:9f:82:9c:fc", ipnet="192.168.222.1/24"  }
               ] 
 vdev        = [ "net_kni0" ]    # for use of vdev with KNI PMD, see https://dpdk.org/doc/guides/nics/kni.html
 
 [proxyengine]
 
-engine       = { flow_steering= "Ip", namespace="nskni", mac="a0:36:9f:82:9c:fc", ipnet="192.168.222.1/24", port=999, timeouts= { established= 1800 }, detailed_records= true }
+engine       = { port=999, timeouts= { established= 1800 }, detailed_records= true }
 targets     = [ { id = "server 1", ip = "192.168.222.32", linux_if="enp7s0f1" , port= 12345 },
                 { id = "server 2", ip = "192.168.222.32", linux_if="enp7s0f1" , port= 12346 },
                 { id = "server 3", ip = "192.168.222.32", linux_if="enp7s0f1" , port= 12347 },
@@ -23,4 +24,4 @@ targets     = [ { id = "server 1", ip = "192.168.222.32", linux_if="enp7s0f1" , 
                 { id = "server 6", ip = "192.168.222.32", linux_if="enp7s0f1" , port= 12350 },
                 { id = "server 7", ip = "192.168.222.32", linux_if="enp7s0f1" , port= 12351 },
               ]
-test_size     = 128
+test_size     = 8
