--- a/tests/test_rfs_ip.toml
+++ b/tests/test_rfs_ip.toml
@@ -13,7 +13,7 @@ ports       = [
               ] 
 vdev        = [ "net_kni0" ]    # for use of vdev with KNI PMD, see https://dpdk.org/doc/guides/nics/kni.html
 
-[proxyengine]
+[engine]
 
 engine       = { port=999, timeouts= { established= 1800 }, detailed_records= true }
 targets     = [ { id = "server 1", ip = "192.168.222.32", linux_if="enp7s0f1" , port= 12345 },
