--- a/tests/timeout.2.toml
+++ b/tests/timeout.2.toml
@@ -13,7 +13,7 @@ ports       = [
               ] 
 vdev        = [ "net_kni0" ]    # for use of vdev with KNI PMD, see https://dpdk.org/doc/guides/nics/kni.html
 
-[proxyengine]
+[engine]
 
 engine      = { flow_steering="Ip", namespace="nskni", mac="3c:fd:fe:9e:ce:4c", ipnet="192.168.222.1/24", port=999 }
 # select non exiting server addresses for the timeout test
